--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -159,6 +159,112 @@
         <div class="wherewhenwhere">Alma Talent, February 15th & 16th, Helsinki, Finland</div>
     </div>
 
+    <div class="card2">
+        <div class="timecircle">90 min</div>
+        <div class="talktitle">Workshop on Sprint Test Planning</div>
+        <div class="talktype">WORKSHOP</div>
+        <div class="wherewhenwhere">maaretp Silver Jubilee (24.10.2022), Online</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">90 min</div>
+        <div class="talktitle">Workshop on Exploratory Unit Testing</div>
+        <div class="talktype">WORKSHOP</div>
+        <div class="wherewhenwhere">maaretp Silver Jubilee (26.10.2022), Online</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">90 min</div>
+        <div class="talktitle">Workshop on Test Automationist's Gambit</div>
+        <div class="talktype">WORKSHOP</div>
+        <div class="wherewhenwhere">maaretp Silver Jubilee (25.10.2022), Online</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">90 min</div>
+        <div class="talktitle">Workshop on Test Coverage</div>
+        <div class="talktype">WORKSHOP</div>
+        <div class="wherewhenwhere">maaretp Silver Jubilee (26.10.2022), Online</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">Pivotal Moments, Pivotal Experiences - a Career Review</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">maaretp Silver Jubilee (27.10.2022), Online</div>
+        <a href="https://www.slideshare.net/maaretp/pivotal-moments-pivotal-experiences-253831320"><i class="fab fa-slideshare"></i></a>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">From Observations to Insights on Test Specialist Careers, co-presented with Okechukwu Egbete</div>
+        <div class="talktype">KEYNOTE</div>
+        <div class="wherewhenwhere">Testing Assembly, 22.9.2022, Helsinki, Finland</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">Speaker at Customer event, 14.6.2022, Online</div>
+        <a href="https://www.slideshare.net/maaretp/testing-assembly-from-observations-ti-insights-on-test-specialist-careers"><i class="fab fa-slideshare"></i></a>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">90 min</div>
+        <div class="talktitle">Ensemble Testing on Selenium 4 (from geolocation to grid), co-presented Manoj Kumar</div>
+        <div class="talktype">WORKSHOP</div>
+        <div class="wherewhenwhere">Selenium Conference India/Virtual (29-30.7.2022), Online</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">Patterns to Whole Team Test Automation Transformation</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">Selenium Conference India/Virtual (29-30.7.2022), Online</div>
+        <a href="https://www.slideshare.net/maaretp/selenium-conf-patterns-to-whole-team-test-automation-transformation"><i class="fab fa-slideshare"></i></a>
+        <a href="https://dev.to/maaretp/patterns-to-whole-team-test-automation-transformation-nmn"><i class="far fa-gem"></i></a>
+    </div>
+    
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">It's More Complicated that THAT!</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">SauceCon (4-5.5.2022), Online</div>
+        <div class="wherewhenwhere">Customer event (4.3.2022), Online</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">Good Exploratory Testing Tactics for Taking Over Testing</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">MoT SFAX (30.3.2022), Online</div>
+        <a href="https://www.slideshare.net/maaretp/mot-sfax-good-exploratory-testing-tactics-for-taking-over-testing"><i class="fab fa-slideshare"></i></a>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">Something in the Way We Test</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">TQSA (9.3.2022), Online</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">What Lies Beneath... Ask Me Anything ft. Maaret Pyhäjärvi</div>
+        <div class="talktype">PANEL</div>
+        <div class="wherewhenwhere">Webinar (19.8.2022), Online</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">1/2 day</div>
+        <div class="talktitle">Social Software Testing Approaches</div>
+        <div class="talktype">TUTORIAL</div>
+        <div class="wherewhenwhere">EuroSTAR Testing Conference, (12.6.2023), Antwerp, Belgium</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">1 day</div>
+        <div class="talktitle">Social Software Testing Approaches</div>
+        <div class="talktype">TUTORIAL</div>
+        <div class="wherewhenwhere">Testing Assembly, (22.9.2022) Helsinki, Finland</div>
+    </div>
+
 <!--
         <div class="card2">
             <div class="timecircle">45 min</div>
