--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -220,13 +220,14 @@
         <a href="https://www.slideshare.net/maaretp/selenium-conf-patterns-to-whole-team-test-automation-transformation"><i class="fab fa-slideshare"></i></a>
         <a href="https://dev.to/maaretp/patterns-to-whole-team-test-automation-transformation-nmn"><i class="far fa-gem"></i></a>
     </div>
-    
+
     <div class="card2">
         <div class="timecircle">45 min</div>
         <div class="talktitle">It's More Complicated that THAT!</div>
         <div class="talktype">TALK</div>
         <div class="wherewhenwhere">SauceCon (4-5.5.2022), Online</div>
         <div class="wherewhenwhere">Customer event (4.3.2022), Online</div>
+        <a href="https://www.slideshare.net/maaretp/saucecon-its-more-complicated-than-that"><i class="fab fa-slideshare"></i></a>
     </div>
 
     <div class="card2">
@@ -241,7 +242,8 @@
         <div class="timecircle">45 min</div>
         <div class="talktitle">Something in the Way We Test</div>
         <div class="talktype">TALK</div>
-        <div class="wherewhenwhere">TQSA (9.3.2022), Online</div>
+        <div class="wherewhenwhere">TSQA (9.3.2022), Online</div>
+        <a href="https://www.slideshare.net/maaretp/tsqa-something-in-the-way-we-test"><i class="fab fa-slideshare"></i></a>
     </div>
 
     <div class="card2">
@@ -264,6 +266,7 @@
         <div class="talktype">TUTORIAL</div>
         <div class="wherewhenwhere">Testing Assembly, (22.9.2022) Helsinki, Finland</div>
     </div>
+
 
 <!--
         <div class="card2">
