--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -97,14 +97,6 @@
 
         <div class="card2">
             <div class="timecircle">45 min</div>
-            <div class="talktitle">Testaus muuttuu, muututko sinä? (Testing Changes, Do You?)</div>
-            <div class="talktype">TALK</div>
-            <div class="wherewhenwhere">Prove Webinar, Nov 16th 2022, Online</div>
-            <a href="https://app.mural.co/t/maaretp9875/m/maaretp9875/1668540689773/59d9e116c541e3ecc84dc181688dd319f5f73999?sender=maaret6604"><i class="far fa-gem"></i></a>
-        </div>
-
-        <div class="card2">
-            <div class="timecircle">45 min</div>
             <div class="talktitle">Breaking Illusions with Testing</div>
             <div class="talktype">KEYNOTE</div>
             <div class="wherewhenwhere">German Testing Day, May 3rd & 4th 2021, Online</div>
@@ -131,6 +123,24 @@
             <div class="wherewhenwhere">Customer Organization (24.11.2021), Online</div>
             <div class="wherewhenwhere">Breakpoint (24.3.2021), Online</div>
             <a href="https://www.slideshare.net/maaretp/breakpoint-2021-contemporary-exploratorytesting"><i class="fab fa-slideshare"></i></a>
+        </div>
+
+        <div class="card2">
+            <div class="timecircle">45 min</div>
+            <div class="talktitle">Go Find What We May Have Missed</div>
+            <div class="talktype">KEYNOTE</div>
+            <div class="wherewhenwhere">testjsconf (18-19.11.2021), Online</div>
+            <div class="talktype">TALK</div>
+            <div class="wherewhenwhere">Customer Organization, January 10th 2022, Online</div>
+            <a href="https://www.slideshare.net/maaretp/testjsconf-go-find-what-we-may-have-missed"><i class="fab fa-slideshare"></i></a>
+        </div>
+
+        <div class="card2">
+            <div class="timecircle">45 min</div>
+            <div class="talktitle">Testaus muuttuu, muututko sinä? (Testing Changes, Do You?)</div>
+            <div class="talktype">TALK</div>
+            <div class="wherewhenwhere">Prove Webinar, Nov 16th 2022, Online</div>
+            <a href="https://app.mural.co/t/maaretp9875/m/maaretp9875/1668540689773/59d9e116c541e3ecc84dc181688dd319f5f73999?sender=maaret6604"><i class="far fa-gem"></i></a>
         </div>
 
         <div class="card2">
@@ -255,6 +265,7 @@
 
     <div class="card2">
         <div class="timecircle">1/2 day</div>
+        <div class="status">NEW</div>
         <div class="talktitle">Social Software Testing Approaches</div>
         <div class="talktype">TUTORIAL</div>
         <div class="wherewhenwhere">EuroSTAR Testing Conference, (12.6.2023), Antwerp, Belgium</div>
@@ -266,6 +277,35 @@
         <div class="talktype">TUTORIAL</div>
         <div class="wherewhenwhere">Testing Assembly, (22.9.2022) Helsinki, Finland</div>
     </div>
+
+    <div class="card2">
+        <div class="timecircle">1 h</div>
+        <div class="talktitle">Panel on Breaking the Bias in Software Testing</div>
+        <div class="talktype">PANEL</div>
+        <div class="wherewhenwhere">STG Webinar (8.3.2022), Online</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">2 day</div>
+        <div class="talktitle">Python for Testing</div>
+        <div class="talktype">COURSE</div>
+        <div class="wherewhenwhere">Co-Taught with Ru Cindrea (March 2022), Online</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">90 min</div>
+        <div class="talktitle">Getting Started with Test Automation in Python</div>
+        <div class="talktype">WORKSHOP</div>
+        <div class="wherewhenwhere">Ohjelmistotestaus ry, Co-Taught with Ru Cindrea (16.1.2022), Online</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">90 min</div>
+        <div class="talktitle">Mobile Test Automation with Appium</div>
+        <div class="talktype">WORKSHOP</div>
+        <div class="wherewhenwhere">Ohjelmistotestaus ry, Co-Taught with Ru Cindrea (17.2.2022), Online</div>
+    </div>
+
 
 
 <!--
