--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -78,7 +78,6 @@
             <div class="talktype">TALK</div>
             <div class="wherewhenwhere">Customer Event, November 10th 2022, Online</div>
             <a href="https://www.slideshare.net/maaretp/axiomsummit-2022-a-practitioners-guide-to-contemporary-exploratory-testing"><i class="fab fa-slideshare"></i></a>
-
         </div>
 
         <div class="card2">
@@ -133,6 +132,68 @@
             <div class="talktype">TALK</div>
             <div class="wherewhenwhere">Customer Organization, January 10th 2022, Online</div>
             <a href="https://www.slideshare.net/maaretp/testjsconf-go-find-what-we-may-have-missed"><i class="fab fa-slideshare"></i></a>
+        </div>
+
+        <div class="card2">
+            <div class="timecircle">45 min</div>
+            <div class="talktitle">Hands-off Exploratory Testing - How to Manage Test at Scale</div>
+            <div class="talktype">KEYNOTE</div>
+            <div class="wherewhenwhere">HUSTEF Conference (18-21.10.2021), Online</div>
+            <div class="wherewhenwhere">QA Talks (4.6.2021), Online</div>
+            <div class="talktype">TALK</div>
+            <div class="wherewhenwhere">Game of Testing -unconference (4.9.2022), Online</div>
+            <a href="https://www.slideshare.net/maaretp/hustef-hands-off-exploratory-testing-managing-at-scale"><i class="fab fa-slideshare"></i></a>
+            <a href="https://www.youtube.com/watch?v=uAPwRaKIa9E"><i class="fas fa-video"></i></a>
+        </div>
+
+        <div class="card2">
+            <div class="timecircle">45 min</div>
+            <div class="talktitle">Practice Makes Better - 5x to Continuous Delivery</div>
+            <div class="talktype">KEYNOTE</div>
+            <div class="wherewhenwhere">Applitools Future of Testing (29.6.2021), Online</div>
+            <a href="https://applitools.com/event/practice-makes-better-5-times-to-continuous-delivery/"><i class="fas fa-video"></i></a>
+            <a href="https://dev.to/maaretp/practice-makes-better-5x-to-continuous-releases-9nh"><i class="far fa-gem""></i></a>
+        </div>
+
+        <div class="card2">
+            <div class="timecircle">45 min</div>
+            <div class="talktitle">I Have a Rock in My Shoe - Navigating Improvement</div>
+            <div class="talktype">KEYNOTE</div>
+            <div class="wherewhenwhere">ATAGTR (11.12.2021), Online</div>
+            <a href="https://www.slideshare.net/maaretp/atagr-i-have-a-rock-in-my-shoe-navigating-improvement"><i class="fab fa-slideshare"></i></a>
+            <a href="https://www.youtube.com/watch?v=tzHpBXhxCHE"><i class="fas fa-video"></i></a>
+        </div>
+
+        <div class="card2">
+            <div class="timecircle">45 min</div>
+            <div class="talktitle">Testing Becoming Harder to Be Valuable</div>
+            <div class="talktype">KEYNOTE</div>
+            <div class="wherewhenwhere">Testing Voices, June 29th 2021, Online</div>
+            <a href="https://www.slideshare.net/maaretp/testing-voices-21-keynote-testing-becoming-harder-to-bevaluable"><i class="fab fa-slideshare"></i></a>
+        </div>
+
+        <div class="card2">
+            <div class="timecircle">45 min</div>
+            <div class="talktitle">Opportunity Cost: Balancing Now and Future</div>
+            <div class="talktype">KEYNOTE</div>
+            <div class="wherewhenwhere">World Quality Summit (8.9.2021), Online</div>
+        </div>
+
+        <div class="card2">
+            <div class="timecircle">30 min</div>
+            <div class="talktitle">Many Hats to Make a Tester</div>
+            <div class="talktype">KEYNOTE</div>
+            <div class="wherewhenwhere">Appium Lite Conference (2.9.2021), Online</div>
+            <a href="https://www.slideshare.net/maaretp/appiumlite-keynote-many-hats-to-make-a-tester-250096476><i class="fab fa-slideshare"></i></a>
+        </div>
+
+        <div class="card2">
+            <div class="timecircle">7 min</div>
+            <div class="talktitle">Better Ideas at Test Design</div>
+            <div class="talktype">TALK</div>
+            <div class="wherewhenwhere">TextFlix (23.10.2021), Online</div>
+            <a href="https://www.youtube.com/watch?v=zir0CWmJ8zc"><i class="fas fa-video"></i></a>
+            <a href="https://dev.to/maaretp/better-ideas-at-test-design-2c62"><i class="far fa-gem""></i></a>
         </div>
 
         <div class="card2">
@@ -306,7 +367,28 @@
         <div class="wherewhenwhere">Ohjelmistotestaus ry, Co-Taught with Ru Cindrea (17.2.2022), Online</div>
     </div>
 
+    <div class="card2">
+        <div class="timecircle">1 day</div>
+        <div class="talktitle">Exploratory Testing on Programmatic (Computer) Interfaces</div>
+        <div class="talktype">TUTORIAL</div>
+        <div class="wherewhenwhere">Sanae BEER.EX (29.-30.9.2022), Bratislava, Slovakia</div>
+        <div class="wherewhenwhere">Conference for Association for Software Testing (CAST) 2019 (12.8.2019), Cocoa Beach, Florida, USA</div>
+    </div>
 
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">Exploring Realities of Testing - Theory to Practice</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">MoT Cork Meetup (18.11.2021), Online</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">Programming Assignments in Tester Interviews</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">Ohjelmistotestaus ry meetup (16.12.2021), Online</div>
+        <a href="https://www.slideshare.net/maaretp/programming-assignments-in-tester-interviews"><i class="fab fa-slideshare"></i></a>
+    </div>
 
 <!--
         <div class="card2">
