Adding more slideshare

--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -380,6 +380,7 @@
         <div class="talktitle">Exploring Realities of Testing - Theory to Practice</div>
         <div class="talktype">TALK</div>
         <div class="wherewhenwhere">MoT Cork Meetup (18.11.2021), Online</div>
+        <a href=" https://www.slideshare.net/maaretp/mot-cork-exploring-realities-of-testing-from-theory-to-practice"><i class="fab fa-slideshare"></i></a>
     </div>
 
     <div class="card2">
