--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -47,7 +47,7 @@
             <div class="timecircle">45 min</div>
             <div class="talktitle">Targeting Errors of Omission</div>
             <div class="talktype">KEYNOTE</div> 
-            <div class="wherewhenwhere">Global Testing Retreat, December 9-11th 2022, Online</div>
+            <div class="wherewhenwhere">Agile Testing Alliance Global Testing Retreat (ATAGTR), December 9-11th 2022, Online</div>
             <a href="https://www.slideshare.net/maaretp/atagr-targeting-errors-of-omission"><i class="fab fa-slideshare"></i></a>
             <!--
             <i class="fas fa-video"></i>
@@ -159,7 +159,7 @@
             <div class="timecircle">45 min</div>
             <div class="talktitle">I Have a Rock in My Shoe - Navigating Improvement</div>
             <div class="talktype">KEYNOTE</div>
-            <div class="wherewhenwhere">ATAGTR (11.12.2021), Online</div>
+            <div class="wherewhenwhere">Agile Testing Alliance Global Testing Retreat (ATAGTR) (11.12.2021), Online</div>
             <a href="https://www.slideshare.net/maaretp/atagr-i-have-a-rock-in-my-shoe-navigating-improvement"><i class="fab fa-slideshare"></i></a>
             <a href="https://www.youtube.com/watch?v=tzHpBXhxCHE"><i class="fas fa-video"></i></a>
         </div>
@@ -184,7 +184,15 @@
             <div class="talktitle">Many Hats to Make a Tester</div>
             <div class="talktype">KEYNOTE</div>
             <div class="wherewhenwhere">Appium Lite Conference (2.9.2021), Online</div>
-            <a href="https://www.slideshare.net/maaretp/appiumlite-keynote-many-hats-to-make-a-tester-250096476><i class="fab fa-slideshare"></i></a>
+            <a href="https://www.slideshare.net/maaretp/appiumlite-keynote-many-hats-to-make-a-tester-250096476"><i class="fab fa-slideshare"></i></a>
+        </div>
+
+        <div class="card2">
+            <div class="timecircle">45 min</div>
+            <div class="talktitle">Building Status - or Why None of My Advice Will Work for You Today</div>
+            <div class="talktype">KEYNOTE</div>
+            <div class="wherewhenwhere">Agile Testing Alliance Global Testing Retreat (ATAGTR) (12-13.12.2020), Online</div>
+            <a href="https://www.slideshare.net/maaretp/atagtr-20-keynote-building-status"><i class="fab fa-slideshare"></i></a>
         </div>
 
         <div class="card2">
@@ -229,6 +237,14 @@
         <div class="wherewhenwhere">Alma Talent, September 4th & 5th 2018, Helsinki, Finland</div>
         <div class="wherewhenwhere">Alma Talent, February 15th & 16th, Helsinki, Finland</div>
     </div>
+
+    <div class="card2">
+        <div class="timecircle">1/2 day</div>
+        <div class="talktitle">Exploratory Testing Work Course Condenced</div>
+        <div class="talktype">COURSE</div>
+        <div class="wherewhenwhere">Customer Organization (20.12.2021), Online</div>
+        <div class="wherewhenwhere">Customer Organization (21.12.2021), Online</div>
+        </div>
 
     <div class="card2">
         <div class="timecircle">90 min</div>
@@ -390,6 +406,129 @@
         <div class="wherewhenwhere">Ohjelmistotestaus ry meetup (16.12.2021), Online</div>
         <a href="https://www.slideshare.net/maaretp/programming-assignments-in-tester-interviews"><i class="fab fa-slideshare"></i></a>
     </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">How to Get Better at Exploratory Testing</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">UNICOM Agile,DevOps,Testing (20.7.2022), Online</div>
+        <div class="wherewhenwhere">MoT Sarajevo Meetup (27.10.2021), Online</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">60 min</div>
+        <div class="talktitle">Creating Career Opportunities in Quality Engineering</div>
+        <div class="talktype">PANEL</div>
+        <div class="wherewhenwhere">mabl Experience (28.10.2021), Online. </div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">A Year in Test Automation</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">QAstiontime meetup (15.9.2021), Online</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">1/2 day</div>
+        <div class="talktitle">Setting Up Website Hosted on Github</div>
+        <div class="talktype">COURSE</div>
+        <div class="wherewhenwhere">Mimmit Koodaa training (14.6.2021), Online</div>
+        <div class="wherewhenwhere">Mimmit Koodaa training (21.6.2021), Online</div>
+        <div class="wherewhenwhere">Mimmit Koodaa training (2.8.2021), Online</div>
+        <div class="wherewhenwhere">Mimmit Koodaa training (9.8.2021), Online</div>
+        <div class="wherewhenwhere">Mimmit Koodaa training (16.8.2021), Online</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">Exploring Pipelines</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">TSQA meetup (1.4.2021), Online</div>
+        <a href="https://dev.to/maaretp/exploring-pipelines-32og"><i class="far fa-gem"></i></a>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">60 min</div>
+        <div class="talktitle">Exploring the Exploratory with Maaret Pyhäjärvi</div>
+        <div class="talktype">PANEL</div>
+        <div class="wherewhenwhere">Ministry of Testing Bangalore (7.5.2021), Online</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">60 min</div>
+        <div class="talktitle">Fireside Chat on Scaling Your QA Ops</div>
+        <div class="talktype">PANEL</div>
+        <div class="wherewhenwhere">BrowserStack event (19.7.2022), Online</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">60 min</div>
+        <div class="talktitle">Fireside Chat with Maaret Pyhäjärvi</div>
+        <div class="talktype">PANEL</div>
+        <div class="wherewhenwhere">mabl Experience tour (23.3.2021), Online</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">60 min</div>
+        <div class="talktitle">Communities Today Chain Conversation</div>
+        <div class="talktype">PANEL</div>
+        <div class="wherewhenwhere">Chain Conversations (31.3.2021), Online</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">An Update on What Happens in Testing</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">Customer Organization (18.3.2021), Online</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">90 min</div>
+        <div class="talktitle">Exploratory Testing with a Constraint: Unconfirmed Issues</div>
+        <div class="talktype">WORKSHOP</div>
+        <div class="wherewhenwhere">customer organization (11.6.2021), Online</div>
+        <div class="wherewhenwhere">Exploratory Testing Academy (26.4.2021), Online</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">90 min</div>
+        <div class="talktitle">Exploratory Testing with a Constraint: Test Automation</div>
+        <div class="talktype">WORKSHOP</div>
+        <div class="wherewhenwhere">customer organization (10.6.2021), Online</div>
+        <div class="wherewhenwhere">Exploratory Testing Academy (27.4.2021), Online</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">90 min</div>
+        <div class="talktitle">Exploratory Testing with a Constraint: Self-Management</div>
+        <div class="talktype">WORKSHOP</div>
+        <div class="wherewhenwhere">Trainer at a customer organization (9.6.2021), Online</div>
+        <div class="wherewhenwhere">Exploratory Testing Academy (28.4.2021), Online</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">90 min</div>
+        <div class="talktitle">Contemporary Exploratory Testing Ask Anyone Anything</div>
+        <div class="talktype">WORKSHOP</div>
+        <div class="wherewhenwhere">Exploratory Testing Academy (29.4.2021), Online</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">90 min</div>
+        <div class="talktitle">Software Testing Ask Anyone Anything</div>
+        <div class="talktype">WORKSHOP</div>
+        <div class="wherewhenwhere">Customer Organization (9.7.2021), Online</div>
+        <a href="https://twitter.com/maaretp/status/1413440131495759874?s=20"><i class="far fa-gem"></i></a>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">How to Increase Your Impact</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">customer organization (22.1.2021), Online</div>
+    </div>
+
 
 <!--
         <div class="card2">
