--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -196,6 +196,14 @@
         </div>
 
         <div class="card2">
+            <div class="timecircle">45 min</div>
+            <div class="talktitle">Social Software Testing Approaches</div>
+            <div class="talktype">KEYNOTE</div>
+            <div class="wherewhenwhere">Testing United Conference (5-6.11.2020), Online</div>
+            <a href="https://www.slideshare.net/maaretp/testing-united-social-software-testing-approaches"><i class="fab fa-slideshare"></i></a>
+        </div>
+
+        <div class="card2">
             <div class="timecircle">7 min</div>
             <div class="talktitle">Better Ideas at Test Design</div>
             <div class="talktype">TALK</div>
