--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -204,6 +204,143 @@
         </div>
 
         <div class="card2">
+            <div class="timecircle">45 min</div>
+            <div class="talktitle">Opportunity Cost Drives my Testing</div>
+            <div class="talktype">KEYNOTE</div>
+            <div class="wherewhenwhere">Step-In Summit Conference (4.9.2020), Online</div>
+        </div>
+
+        <div class="card2">
+            <div class="timecircle">45 min</div>
+            <div class="talktitle">Exploratory Testing on Computer Interfaces</div>
+            <div class="talktype">KEYNOTE</div>
+            <div class="wherewhenwhere">API Conf 2019 (16.10.2019), Berlin, Germany</div>
+        </div>
+
+        <div class="card2">
+            <div class="timecircle">45 min</div>
+            <div class="talktitle">Intersection of Automation and Exploratory TestingExploratory Testing on Computer Interfaces</div>
+            <div class="talktype">KEYNOTE</div>
+            <div class="wherewhenwhere">Testing Cup (10.6.2019), Poznan, Poland</div>
+            <div class="wherewhenwhere">TestIstanbul (16.4.2019), Istanbul, Turkey</div>
+            <div class="wherewhenwhere">Selenium Conference India (29-30.6.2018), Bengaluru, India</div>
+            <div class="talktype">TALK</div>
+            <div class="wherewhenwhere">Dev# (21.9.2019), Gdansk, Poland</div>
+            <div class="wherewhenwhere">React Finland (25.4.2019), Helsinki, Finland.</div>
+            <div class="wherewhenwhere">Software Testing Helsinki Meetup (5.10.2018), Helsinki, Finland</div>
+            <div class="wherewhenwhere">The Testing Guild Online Conference (20.6.2018), Online</div>
+            <a href="https://www.youtube.com/watch?v=Es4SfYog5VA"><i class="fas fa-video"></i></a>
+        </div>
+
+        <div class="card2">
+            <div class="timecircle">45 min</div>
+            <div class="talktitle">Quality - Learning is All that Matters</div>
+            <div class="talktype">KEYNOTE</div>
+            <div class="wherewhenwhere">Customer Organization (11.1.2019), Helsinki, Finland</div>
+            <div class="wherewhenwhere">Customer Organization (20.12.2018), Helsinki, Finland</div>
+            <div class="talktype">TALK</div>
+            <div class="wherewhenwhere">JAX London (9.10.2019), London, United Kingdom</div>
+        </div>
+
+        <div class="card2">
+            <div class="timecircle">45 min</div>
+            <div class="talktitle">Next Level Teamwork: Pairing and Ensembling (Mobbing)</div>
+            <div class="talktype">KEYNOTE</div>
+            <div class="wherewhenwhere">TestBash Australia (19.10.2018), Sydney, Australia</div>
+        </div>
+
+        <div class="card2">
+            <div class="timecircle">45 min</div>
+            <div class="talktitle">Making Teams Awesome</div>
+            <div class="talktype">KEYNOTE</div>
+            <div class="wherewhenwhere">Testing Portugal 2017, Lisbon, Portugal (28.11.2017)</div>
+            <div class="wherewhenwhere">STARWest Conference 2017, Anaheim, USA (1.-6.10.2017)</div>
+            <div class="wherewhenwhere">SEETest Conference 2017, Sofia, Bulgaria (29.9.2017)</div>
+            <div class="talktype">TALK</div>
+            <div class="wherewhenwhere">STAREast Conference 2018, Orlando, USA (29.4-4.5.2018)</div>
+        </div>
+
+        <div class="card2">
+            <div class="timecircle">45 min</div>
+            <div class="talktitle">Learning through Osmosis</div>
+            <div class="talktype">KEYNOTE</div>
+            <div class="wherewhenwhere">Agile Testing Days 2017, Potsdam, Germany (13-17.11.2017)</div>
+            <div class="wherewhenwhere">Agile Day Riga 2017, Riga, Latvia (7-8.7.2017) </div>
+        </div>
+
+        <div class="card2">
+            <div class="timecircle">45 min</div>
+            <div class="talktitle">Increase Your Impact as a Tester</div>
+            <div class="talktype">KEYNOTE</div>
+            <div class="wherewhenwhere">Moldova Software Testing and Automation Conference, Chisinau, Moldova (10.2.2018)</div>
+            <div class="wherewhenwhere">Swiss Testing Days, Zurich, Switzerland (16.2.2017)</div>
+        </div>
+
+        <div class="card2">
+            <div class="timecircle">45 min</div>
+            <div class="talktitle">Increase Your Impact as a Tester</div>
+            <div class="talktype">KEYNOTE</div>
+            <div class="wherewhenwhere">TestBash Philly, Philadelphia, USA (10-11.11.2016)</div>
+            <div class="talktype">TALK</div>
+            <div class="wherewhenwhere">NewCrafts Conference, Paris, France (18-19.5.2017)</div>
+            <div class="wherewhenwhere">Customer Organization, Helsinki, Finland (31.5.2018)</div>
+        </div>
+
+        <div class="card2">
+            <div class="timecircle">45 min</div>
+            <div class="talktitle">Amplify Your Impact with Ensemble (Mob) Testing</div>
+            <div class="talktype">KEYNOTE</div>
+            <div class="wherewhenwhere">UKStar, London, UK (27-28.2.2017)</div>
+        </div>
+
+        <div class="card2">
+            <div class="timecircle">45 min</div>
+            <div class="talktitle">Perfecting the Craft of Test Automation</div>
+            <div class="talktype">KEYNOTE</div>
+            <div class="wherewhenwhere">Agile and Automation Days, Warsaw, Poland (21.11.2016)</div>
+            <div class="talktype">TALK</div>
+            <div class="wherewhenwhere">Talentum Testaus 2016, Helsinki, Finland (8.11.2016)</div>
+            <div class="wherewhenwhere">AgileJKL meetup, Jyväskylä, Finland (7.9.2016)</div>
+        </div>
+
+        <div class="card2">
+            <div class="timecircle">45 min</div>
+            <div class="talktitle">We're Work in Progress - Lessons on Becoming a Great Tester</div>
+            <div class="talktype">KEYNOTE</div>
+            <div class="wherewhenwhere">Test Masters Academy New Testing Conference, New York, USA (26-27.9.2016)</div>
+            <div class="talktype">TALK</div>
+            <div class="wherewhenwhere">Speaker at FiSTB Testing Assembly, Helsinki, Finland (20-21.9.2016)</div>
+        </div>
+
+        <div class="card2">
+            <div class="timecircle">45 min</div>
+            <div class="talktitle">Tales from Developer Tester Collaboration</div>
+            <div class="talktype">KEYNOTE</div>
+            <div class="wherewhenwhere">Agile Serbia, Belgrade, Serbia (23.4.2016)</div>
+            <div class="wherewhenwhere">TestBash NY, New York, USA (6.11.2015)</div>
+            <div class="talktype">TALK</div>
+            <div class="wherewhenwhere">Software Testing Finland / Helsinki Agile Testing meetup (7.10.2015)</div>
+            <div class="wherewhenwhere">Customer Organization, Helsinki, Finland (10.9.2015)</div>
+            <a href="http://www.slideshare.net/maaretp/tales-from-tester-developer-collaboration"><i class="fab fa-slideshare"></i></a>
+        </div>
+
+        <div class="card2">
+            <div class="timecircle">45 min</div>
+            <div class="talktitle">Collaborative Exploratory and Unit Testing</div>
+            <div class="talktype">KEYNOTE</div>
+            <div class="wherewhenwhere">Testival, Split, Croatia (19.9.2015)</div>
+            <a href="http://www.slideshare.net/maaretp/collaborative-exploratory-and-unit-testing-talk-at-testival"><i class="fab fa-slideshare"></i></a>
+        </div>
+
+        <div class="card2">
+            <div class="timecircle">45 min</div>
+            <div class="talktitle">Software Talks, Learn to Listen</div>
+            <div class="talktype">KEYNOTE</div>
+            <div class="wherewhenwhere">Nortal Tech Days, May 22nd 2015, Tallinn, Estonia</div>
+            <a href="http://www.slideshare.net/maaretp/software-talks-learn-to-listen"><i class="fab fa-slideshare"></i></a>
+        </div>
+
+        <div class="card2">
             <div class="timecircle">7 min</div>
             <div class="talktitle">Better Ideas at Test Design</div>
             <div class="talktype">TALK</div>
