Keynotes done. 39 public keynotes, 6 that were invited as keynotes in-org.

--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -25,7 +25,7 @@
     <div class="box2">
 
         <div class="card2">
-        <div class="card2text">Speaking in public 2001-2022, Maaret has delivered 509 sessions and 39 keynotes.</div>
+        <div class="card2text">Speaking in public 2001-2022, Maaret has delivered 509 sessions and 39 public conference keynotes.</div>
             <img src="../images/Talks2022.png" alt="statistics of talks from Maaret">
         <div class="card2text"><i class="fab fa-slideshare"></i> slides, <i class="fas fa-video"></i>video, <i class="far fa-gem"></i>article, <i class="fas fa-bars"></i>abstract available on some of the talks.</div>
         </div>
@@ -59,11 +59,11 @@
             <div class="timecircle">45 min</div>
             <div class="status">SCHEDULED</div>
             <div class="talktitle">Let's Do a Thing and Call It Foo</div>
-            <div class="talktype">KEYNOTE</div> 
+            <div class="talktype">KEYNOTE</div>
             <div class="wherewhenwhere">Testμ Conference, August 23rd 2022, Online</div>
-            <div class="talktype">TALK</div> 
-            <div class="wherewhenwhere">Supermetrics Tech Meetup, August 17th 2022, Helsinki, Finland</div>
             <div class="wherewhenwhere">Customer Event, December 8th 2022, Helsinki, Finland</div>
+            <div class="talktype">TALK</div>
+            <div class="wherewhenwhere">Supermetrics Tech Meetup, August 17th 2022, Helsinki, Finland</div>
             <div class="wherewhenwhere">FooConf, February 1st 2023, Helsinki, Finland</div>
             <a href="https://www.slideshare.net/maaretp/lets-do-a-thing-and-call-it-foo"><i class="fab fa-slideshare"></i></a>
             <a href="https://www.youtube.com/watch?v=lkJ6bixMrg8&t=2985s"><i class="fas fa-video"></i></a>
