--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -25,7 +25,7 @@
     <div class="box2">
 
         <div class="card2">
-        <div class="card2text">Speaking in public 2001-2022, Maaret has delivered 509 sessions and 39 public conference keynotes.</div>
+        <div class="card2text">Speaking in public 2001-2022, Maaret has delivered 509 sessions and 39 public conference keynote sessions.</div>
             <img src="../images/Talks2022.png" alt="statistics of talks from Maaret">
         <div class="card2text"><i class="fab fa-slideshare"></i> slides, <i class="fas fa-video"></i>video, <i class="far fa-gem"></i>article, <i class="fas fa-bars"></i>abstract available on some of the talks.</div>
         </div>
