One more keynote

--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -278,7 +278,7 @@
 
         <div class="card2">
             <div class="timecircle">45 min</div>
-            <div class="talktitle">Increase Your Impact as a Tester</div>
+            <div class="talktitle">An Ensemble (Mob) Testing Experience</div>
             <div class="talktype">KEYNOTE</div>
             <div class="wherewhenwhere">TestBash Philly, Philadelphia, USA (10-11.11.2016)</div>
             <div class="talktype">TALK</div>
@@ -341,6 +341,16 @@
         </div>
 
         <div class="card2">
+            <div class="timecircle">45 min</div>
+            <div class="talktitle">From Observations to Insights on Test Specialist Careers, co-presented with Okechukwu Egbete</div>
+            <div class="talktype">KEYNOTE</div>
+            <div class="wherewhenwhere">Testing Assembly, 22.9.2022, Helsinki, Finland</div>
+            <div class="talktype">TALK</div>
+            <div class="wherewhenwhere">Speaker at Customer event, 14.6.2022, Online</div>
+            <a href="https://www.slideshare.net/maaretp/testing-assembly-from-observations-ti-insights-on-test-specialist-careers"><i class="fab fa-slideshare"></i></a>
+        </div>
+
+        <div class="card2">
             <div class="timecircle">7 min</div>
             <div class="talktitle">Better Ideas at Test Design</div>
             <div class="talktype">TALK</div>
@@ -348,6 +358,13 @@
             <a href="https://www.youtube.com/watch?v=zir0CWmJ8zc"><i class="fas fa-video"></i></a>
             <a href="https://dev.to/maaretp/better-ideas-at-test-design-2c62"><i class="far fa-gem""></i></a>
         </div>
+
+        <div class="card2">
+            <div class="timecircle">7 min</div>
+            <div class="talktitle">Up Your Agency</div>
+            <div class="talktype">TALK</div>
+            <div class="wherewhenwhere">TextFlix (28.11.2020), Online</div>
+            </div>
 
         <div class="card2">
             <div class="timecircle">45 min</div>
@@ -425,16 +442,6 @@
         <div class="talktype">TALK</div>
         <div class="wherewhenwhere">maaretp Silver Jubilee (27.10.2022), Online</div>
         <a href="https://www.slideshare.net/maaretp/pivotal-moments-pivotal-experiences-253831320"><i class="fab fa-slideshare"></i></a>
-    </div>
-
-    <div class="card2">
-        <div class="timecircle">45 min</div>
-        <div class="talktitle">From Observations to Insights on Test Specialist Careers, co-presented with Okechukwu Egbete</div>
-        <div class="talktype">KEYNOTE</div>
-        <div class="wherewhenwhere">Testing Assembly, 22.9.2022, Helsinki, Finland</div>
-        <div class="talktype">TALK</div>
-        <div class="wherewhenwhere">Speaker at Customer event, 14.6.2022, Online</div>
-        <a href="https://www.slideshare.net/maaretp/testing-assembly-from-observations-ti-insights-on-test-specialist-careers"><i class="fab fa-slideshare"></i></a>
     </div>
 
     <div class="card2">
