Deleted and fixed many

--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -639,7 +639,7 @@
         <div class="timecircle">90 min</div>
         <div class="talktitle">Exploratory Testing with a Constraint: Unconfirmed Issues</div>
         <div class="talktype">WORKSHOP</div>
-        <div class="wherewhenwhere">customer organization (11.6.2021), Online</div>
+        <div class="wherewhenwhere">Customer Organization (11.6.2021), Online</div>
         <div class="wherewhenwhere">Exploratory Testing Academy (26.4.2021), Online</div>
     </div>
 
