--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -647,7 +647,7 @@
         <div class="timecircle">90 min</div>
         <div class="talktitle">Exploratory Testing with a Constraint: Test Automation</div>
         <div class="talktype">WORKSHOP</div>
-        <div class="wherewhenwhere">customer organization (10.6.2021), Online</div>
+        <div class="wherewhenwhere">Customer Organization (10.6.2021), Online</div>
         <div class="wherewhenwhere">Exploratory Testing Academy (27.4.2021), Online</div>
     </div>
 
@@ -655,7 +655,7 @@
         <div class="timecircle">90 min</div>
         <div class="talktitle">Exploratory Testing with a Constraint: Self-Management</div>
         <div class="talktype">WORKSHOP</div>
-        <div class="wherewhenwhere">Trainer at a customer organization (9.6.2021), Online</div>
+        <div class="wherewhenwhere">Customer Organization (9.6.2021), Online</div>
         <div class="wherewhenwhere">Exploratory Testing Academy (28.4.2021), Online</div>
     </div>
 
