--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -357,6 +357,8 @@
                 <div class="wherewhenwhere">Ministry of Testing, Brighton, UK (22.10.2015)</div>
                 <div class="wherewhenwhere">Customer Organization, Helsinki, Finland (26.11.2015)</div>
                 <div class="wherewhenwhere">Altom, Helsinki, Finland (6.5.2015)</div>
+                <div class="wherewhenwhere">Customer Organization, Helsinki, Finland (9.4.2014)</div>
+                <div class="wherewhenwhere">Latvian Dev Network, August 31st, Riga, Latvia </div>
             </div>
 
         <div class="card2">
@@ -676,6 +678,123 @@
         <div class="talktype">PANEL</div>
         <div class="wherewhenwhere">mabl Experience (28.10.2021), Online. </div>
     </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">Continuous Delivery without Automation</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">Agile Finland Continuous Deployment event, December 2nd 2014, Helsinki </div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">1/2 day</div>
+        <div class="talktitle">Teknisen laadun rakentaminen: yksikkötestit, katselmoinnit ja muut mekanismit.</div>
+        <div class="talktype">TRAINING</div>
+        <div class="wherewhenwhere">Customer Organization, November 3rd 2014, Helsinki, Finland </div>
+        <div class="wherewhenwhere">Customer Organization, November 5th 2014, Turku, Finland </div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">Minä en koodaa, olenko enää hyödyllinen? (I Don't Code, Am I No Longer Useful?)</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">Talentum Software QA & Testing Summit, October 7th & 8th 2014, Helsinki, Finland </div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">Examples of Testing and a Tester's Work in Industry</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">Aalto University Course, September 16th 2014, Helsinki, Finland </div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">Lessons Learned in Wasting 1829,5 hrs of Outsourced Work</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">Outsource Ukraine, June 10th 2014, Online </div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">Full-stack Developer & Complete Product Owner - the Steps Towards Becoming Unicorn Grade</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">Agile Finland Breakfast, June 6th 2014, Helsinki, Finland </div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">On tärkeää osata muutakin kuin testausta, mutta testaus rautaisen hyvin (It's Important to Know More Than Testing, But Testing Especially Well)</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">Ohjelmistotestaus ry, May 26th 2014, Helsinki, Finland </div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">Non-Coding Activities a Development Team Needs</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">Agile Finland, January 15th 2014, Oulu, Finland </div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">Serendipity and Perseverance: Injecting Testing in a Test-Resistant Team</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">Wildcard Conference, September 13th 2013, Riga, Latvia</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">2 day</div>
+        <div class="talktitle">Hyväksymistestaus (Acceptance Testing)</div>
+        <div class="talktype">COURSE</div>
+        <div class="wherewhenwhere">Customer Organization, August 26th & 27th 2014, Helsinki, Finland</div>
+        <div class="wherewhenwhere">Customer Organization, September 25th & 26th 2013, Helsinki, Finland</div>
+        <div class="wherewhenwhere">Customer Organization, September 18th & 19th 2013, Helsinki, Finland</div>
+        <div class="wherewhenwhere">IIR, May 2010, Helsinki, Finland</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">2 day</div>
+        <div class="talktitle">Testitapausten suunnittelu (Test Case Design)</div>
+        <div class="talktype">COURSE</div>
+        <div class="wherewhenwhere">Altom, May 27th & 28th 2014, Helsinki, Finland </div>
+        <div class="wherewhenwhere">Talentum/FYI, April 11th & 12th 2013, Helsinki, Finland </div>
+        <div class="wherewhenwhere">Talentum/FYI, November 6th & 7th 2012, Helsinki, Finland </div>
+        <div class="wherewhenwhere">IIR, June 2010, Helsinki, Finland </div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">2 day</div>
+        <div class="talktitle">Test Automation</div>
+        <div class="talktype">COURSE</div>
+        <div class="wherewhenwhere">Profit, September 10th & 11th 2013, Jyväskylä, Finland </div>
+        <div class="wherewhenwhere">Profit, May 7th & 8th 2013, Jyväskylä, Finland </div>
+        <div class="wherewhenwhere">Profit, April 25th & 26th 2013, Jyväskylä, Finland </div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">1 day</div>
+        <div class="talktitle">Vaatimusosaamisen kasvattaminen (Strengthening Requirement Skills)</div>
+        <div class="talktype">COURSE</div>
+        <div class="wherewhenwhere">Altom, May 14th 2014, Helsinki, Finland </div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">4 wks</div>
+        <div class="talktitle">Altom Black Box Software Testing Foundation</div>
+        <div class="talktype">COURSE</div>
+        <div class="wherewhenwhere">Altom co-instructor with Ru Cindrea, Alex Rotaru and Cem Kaner, January 2014, Helsinki, Finland </div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">1/2 day</div>
+        <div class="talktitle"> Test-Driven Development with Lego Robots</div>
+        <div class="talktype">WORKSHOP</div>
+        <div class="wherewhenwhere">Turku Agile Day, May 12th 2014, Turku, Finland </div>
+        <div class="wherewhenwhere">Belgium Testing Days, March 17th & 18th & 19th 2014, Bruges, Belgium </div>
+    </div>
+
+
 
 <!--
         <div class="card2">
