--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -661,6 +661,167 @@
     </div>
 
     <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">Automatisoituuko testaus tulevaisuudessa? (Will Testing Be Automated in the Future?)</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">IIR Kokonaisvaltainen Testaaminen, September 2004, Helsinki, Finland</div>
+        <div class="wherewhenwhere">IIR Kokonaisvaltainen Testaaminen, January 2005, Helsinki, Finland</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">Testitapaukset ja testitapausarkkitehtuuri (Test Cases and Test Case Architecture)</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">IIR Kokonaisvaltainen Testaaminen, January 2004, Helsinki, Finland</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">Testitapaukset ja testausmallit (Test Cases and Test Methodologies)</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">IIR Kokonaisvaltainen Testaaminen, September 31st 2003, Helsinki, Finland</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">Testauksen kohdistaminen erilaisiin asiayhteyksiin  (Context-Driven Testing)</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">IIR, March 27th & 28th 2003, Helsinki, Finland</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">Testauksen ryhmädynamiikka  (Group Dynamics in Testing)</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">Merito Forum Ohjelmistojen tehokas testaus, September 25th 2003, Helsinki, Finland</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">Optimoidun ohjelmistokehityksen ja -testauksen avaimet (Keys to Optimizing Software Development and Testing)</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">TestIT Summit, November 2003, Helsinki, Finland</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">Testauksen huippukäytännöt (Testing Best Practices)</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">Customer Organization, February 6th 2003, Helsinki, Finland</div>
+        <div class="wherewhenwhere">Conformiq Forum, March 12th 2003, Helsinki, Finland</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">Arkkitehtuurien vaikutus integrointitestaukseen (Impact of Architecture to Integration Testing)</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">Merito Forum Ohjelmistoarkkitehtuurit ja turvalliset ohjelmistot, January 2005, Helsinki, Finland</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">Tuottavuutta testauksen kehittämisessä (Productivity in Test Improvement)</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">3S Symposium, 2004, Helsinki, Finland</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">Suunnitelmaohjattu vs. ketterä testaus (Plan-driven vs. Agile Testing)</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">Customer Organization, February 2005, Helsinki, Finland</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">Tutkivan testauksen kokemukset (Exploratory Testing Experiences)</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">Customer Organization, May 9th 2003, Helsinki, Finland</div>
+        <div class="wherewhenwhere">Customer Organization, October 2004, Helsinki, Finland</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">Testauksen kustannukset ja haasteet (Testing Costs and Challenges)</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">Testauksen Uusi Aika -seminaari, Autumn 2003, Helsinki, Finland</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">Planning for Plan-driven vs. Agile Testing)</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">EuroSTAR 2004, December 2004, Copenhagen, Denmark</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">Increasing Understanding of the Modern Testing Perspective in Software Product Development Projects</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">HICSS-36, January 2003, Hawaii, USA</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">Measuring in Release Management from a Testing Point of View</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">Merito Forum Project Management Best Practices, February 4th 2002, Helsinki, Finland</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">Quality by Design: Laadun toteutus arkkitehtuurista koodiin; Testauksen suhde vaatimusten hallintaan - jäljitettävyys virheistä vaatimuksiin (Quality by Design: Implementing Quality from Architecture to Code; Relationship of Testing and Requirements and Traceability from defects to requirements)</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">Kontakti.net Laadukas ohjelmistotuotanto, March 5th 2003, Helsinki, Finland</div>
+        <div class="wherewhenwhere">Kontakti.net Laadukas ohjelmistotuotanto, September 17th 2003, Helsinki, Finland</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">Structuring Software Testing with TMap and TPI- frameworks</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">Merito Forum Advanced Software Testing, March 21st 2002, Helsinki, Finland</div>
+        <div class="wherewhenwhere">Merito Forum Ohjelmistojen tehokas testaus, September 25th 2003, Helsinki, Finland</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">Testauksen suunnittelu ja organisointi iteratiivisessa tuotekehityksessä (Test Planning and Organizing in iterative software development)</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">IIR Laadukas ohjelmistotestaus, Autumn 2002, Helsinki, Finland</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">Testaus Extreme Programming lähestymistavassa (Testing in Extreme Programming)</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">Customer Organization, May 16th 2002, Helsinki, Finland</div>
+        <div class="wherewhenwhere">IIR Testaus ja Verifiointi, May 28th 2002, Helsinki, Finland</div>
+        <div class="wherewhenwhere">IIR Testaus ja Verifiointi, February 13th 2002, Helsinki, Finland</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">Kontekstiohjattava alihankintasuhteen aloitus (Context-Driven Contracting)</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">SoftaTest Test Summit '04', September 20th 2004, Savonlinna, Finland</div>
+    </div
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">Yksikkötestaus XP-tyyliin (Unit Testing XP Style)</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">SoftaTest, September 20th 2001, Savonlinna, Finland</div>
+    </div>
+
+    <div class="card2">
+        <div class="timecircle">45 min</div>
+        <div class="talktitle">Testaus ohjelmistotuotteen laadun varmistuksessa (Testing in Software Product Quality Assurance)</div>
+        <div class="talktype">TALK</div>
+        <div class="wherewhenwhere">Ohjelmistotuoteliiketoiminnan osaamiskeskuksen ohjelmistoaamiainen, June 14th 2001, Helsinki, Finland</div>
+    </div>
+
+    <div class="card2">
         <div class="timecircle">1/2 day</div>
         <div class="status">NEW</div>
         <div class="talktitle">Social Software Testing Approaches</div>
@@ -711,7 +872,12 @@
                 <div class="wherewhenwhere">Customer Organization, Helsinki, Finland (26.11.2015)</div>
                 <div class="wherewhenwhere">Altom, Helsinki, Finland (6.5.2015)</div>
                 <div class="wherewhenwhere">Customer Organization, Helsinki, Finland (9.4.2014)</div>
-                <div class="wherewhenwhere">Latvian Dev Network, August 31st, Riga, Latvia </div>
+                <div class="wherewhenwhere">Latvian Dev Network, August 31st 2012, Riga, Latvia </div>
+                <div class="wherewhenwhere">Trial Course, May 11th 2009, Helsinki, Finland </div>
+                <div class="wherewhenwhere">Customer Organization, June 22nd 2009, Helsinki, Finland </div>
+                <div class="wherewhenwhere">Customer Organization, November 18nd 2009, Helsinki, Finland </div>
+                <div class="wherewhenwhere">Flander, September 17th 2009, Oulu, Finland </div>
+                <div class="wherewhenwhere">Trial Course, May 5th 2005, Helsinki, Finland </div>
             </div>
 
         <div class="card3">
@@ -798,6 +964,10 @@
         <div class="wherewhenwhere">IIR, December 11th & 12th 2006, Helsinki, Finland </div>
         <div class="wherewhenwhere">IIR, August 24th & 25th 2006, Helsinki, Finland </div>
         <div class="wherewhenwhere">IIR, April 26th & 27th 2006, Helsinki, Finland </div>
+        <div class="wherewhenwhere">IIR, August 19th & 20th 2008, Helsinki, Finland </div>
+        <div class="wherewhenwhere">IIR, May 20th & 21th 2008, Helsinki, Finland </div>
+        <div class="wherewhenwhere">IIR, April 15th & 16th 2008, Helsinki, Finland </div>
+        <div class="wherewhenwhere">IIR, February 5th & 6th 2009, Helsinki, Finland </div>
         <div class="wherewhenwhere">Customer Organization, September 5th & 6th 2006, Helsinki, Finland </div>
         <div class="wherewhenwhere">F-Secure & TestausOSY, May 2006, Helsinki, Finland </div>
         <div class="wherewhenwhere">Customer Organization, June 2004, Helsinki, Finland </div>
@@ -829,13 +999,19 @@
 
     <div class="card3">
         <div class="timecircle">2 day</div>
-        <div class="talktitle">Agile Testing</div>
+        <div class="talktitle">Ketterä testaus (Agile Testing)</div>
         <div class="talktype">COURSE</div>
         <div class="wherewhenwhere">IIR, January 29th & 30th 2009, Helsinki, Finland </div>
         <div class="wherewhenwhere">IIR, March 12th & 13th 2008, Helsinki, Finland </div>
         <div class="wherewhenwhere">IIR, April 2nd & 3rd 2008, Helsinki, Finland </div>
         <div class="wherewhenwhere">Trial Course at F-Secure, February 26th & 27th 2008, Helsinki, Finland </div>
         <div class="wherewhenwhere">Trial Course at F-Secure, January 10th & 11th 2008, Helsinki, Finland </div>
+        <div class="wherewhenwhere">IIR, June 3rd & 4th 2008, Helsinki, Finland </div>
+        <div class="wherewhenwhere">IIR, September 24th & 25th 2009, Helsinki, Finland </div>
+        <div class="wherewhenwhere">IIR, October 8th & 9th 2008, Helsinki, Finland </div>
+        <div class="wherewhenwhere">IIR, March 24th & 25th 2009, Helsinki, Finland </div>
+        <div class="wherewhenwhere">IIR, May 27th & 28th 2009, Helsinki, Finland </div>
+        <div class="wherewhenwhere">Customer Organization, August 18th & 19th 2009, Helsinki, Finland </div>
     </div>
 
     <div class="card3">
@@ -875,6 +1051,7 @@
         <div class="talktitle">Test Certification Fast Forward</div>
         <div class="talktype">COURSE</div>
         <div class="wherewhenwhere">Customer Organization, June 2004, Helsinki, Finland </div>
+        <div class="wherewhenwhere">Customer Organization, January 23rd 2007, Jyväskylä, Finland </div>
     </div>
 
     <div class="card3">
@@ -895,6 +1072,42 @@
     </div>
 
     <div class="card3">
+        <div class="timecircle">2 day</div>
+        <div class="talktitle">Software Testing and Quality Assurance</div>
+        <div class="talktype">COURSE</div>
+        <div class="wherewhenwhere">SoftaTest Soft@weiser, June 19th & 20th 2001, Savonlinna, Finland </div>
+        <div class="wherewhenwhere">SoberIT yrityskoulutus, June 2002, Helsinki, Finland </div>
+    </div>
+
+    <div class="card3">
+        <div class="timecircle">1 day</div>
+        <div class="talktitle">Testauksen kehittäminen, testausvälineet ja ketterä testaus </div>
+        <div class="talktype">COURSE</div>
+        <div class="wherewhenwhere">Customer Organization, October 2004, Helsinki, Finland </div>
+    </div>
+
+    <div class="card3">
+        <div class="timecircle">1 day</div>
+        <div class="talktitle">Käyttötapaukset (Use Cases)</div>
+        <div class="talktype">COURSE</div>
+        <div class="wherewhenwhere">Customer Organization, November 5th 2003, Helsinki, Finland </div>
+    </div>
+
+    <div class="card3">
+        <div class="timecircle">1 day</div>
+        <div class="talktitle">Testauksen peruskurssi</div>
+        <div class="talktype">COURSE</div>
+        <div class="wherewhenwhere">Customer Organization, August 20th 2002, Helsinki, Finland </div>
+    </div>
+
+    <div class="card3">
+        <div class="timecircle">2 day</div>
+        <div class="talktitle">Testauksen jatkokurssi</div>
+        <div class="talktype">COURSE</div>
+        <div class="wherewhenwhere">SoberIT yrityskoulutus, April 9th & 10th 2004, Helsinki, Finland </div>
+    </div>
+
+    <div class="card3">
         <div class="timecircle">4 wks</div>
         <div class="talktitle">Altom Black Box Software Testing Foundation</div>
         <div class="talktype">COURSE</div>
@@ -903,6 +1116,27 @@
         <p>While I no longer teach the BBST course as it is brilliantly packaged and scalable for new teachers, I fully
             endorse the Altom BBST courses for solid basic course on Software Testing.
             <a href="https://tivia.fi/event?tags=%5B9%5D">Tivia ry partners with Altom on making these courses available.</a></p>
+    </div>
+
+    <div class="card3">
+        <div class="timecircle">?</div>
+        <div class="talktitle">Ohjelmistojen testaus ja laadunvarmistus (Software Testing and Quality Assurance)</div>
+        <div class="talktype">COURSE</div>
+        <div class="wherewhenwhere">Teknillinen korkeakoulu, Ohjelmistoliiketoiminnan ja -tuotannon instituutti (SoberIT), Autumn 2000, Helsinki, Finland </div>
+        <div class="wherewhenwhere">Teknillinen korkeakoulu, Ohjelmistoliiketoiminnan ja -tuotannon instituutti (SoberIT), Autumn 2001, Helsinki, Finland </div>
+        <div class="wherewhenwhere">Teknillinen korkeakoulu, Ohjelmistoliiketoiminnan ja -tuotannon instituutti (SoberIT), Autumn 2002, Helsinki, Finland </div>
+        <div class="wherewhenwhere">Teknillinen korkeakoulu, Ohjelmistoliiketoiminnan ja -tuotannon instituutti (SoberIT), Autumn ??, Helsinki, Finland </div>
+        <p>This course is university course on testing and release management, advanced topics. Since I am no longer at university, I no longer teach this.</p>
+        <p>This course is university course on testing. First time I was running the exercises, three other times the whole course. </p>
+
+    </div>
+
+    <div class="card3">
+        <div class="timecircle">?</div>
+        <div class="talktitle">Release Management</div>
+        <div class="talktype">COURSE</div>
+        <div class="wherewhenwhere">Teknillinen korkeakoulu, Ohjelmistoliiketoiminnan ja -tuotannon instituutti (SoberIT), Spring 2001, Helsinki, Finland </div>
+        <p>This course is university course on testing and release management, advanced topics. Since I am no longer at university, I no longer teach this.</p>
     </div>
 
             </div>
