--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -805,7 +805,7 @@
         <div class="talktitle">Kontekstiohjattava alihankintasuhteen aloitus (Context-Driven Contracting)</div>
         <div class="talktype">TALK</div>
         <div class="wherewhenwhere">SoftaTest Test Summit '04', September 20th 2004, Savonlinna, Finland</div>
-    </div
+    </div>
 
     <div class="card2">
         <div class="timecircle">45 min</div>
