--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -833,6 +833,7 @@
         <div class="timecircle">1/2 day</div>
         <div class="talktitle"> Test-Driven Development with Lego Robots</div>
         <div class="talktype">TUTORIAL</div>
+        <div class="wherewhenwhere">TestBash, March 26th 2015, Brighton, UK</div>
         <div class="wherewhenwhere">Turku Agile Day, May 12th 2014, Turku, Finland </div>
         <div class="wherewhenwhere">Belgium Testing Days, March 17th & 18th & 19th 2014, Bruges, Belgium </div>
     </div>
@@ -909,6 +910,25 @@
             </div>
 
             <div class="card3">
+                <div class="timecircle">2 day</div>
+                <div class="talktitle">Test Automation Work Course / Test Automation Primer</div>
+                <div class="talktype">COURSE</div>
+                <div class="wherewhenwhere">Urasilta public course, Jyväskylä, Finland (7-8.9.2016)</div>
+                <div class="wherewhenwhere">Alma Robotestaus event, Helsinki (13.6.2018)</div>
+                <div class="wherewhenwhere">Alma Robotestaus event, Helsinki (13.6.2019)</div>
+            </div>
+
+            <div class="card3">
+                <div class="timecircle">1/2 day</div>
+                <div class="talktitle">Ohjelmistotestauksen ensiaskeleet (First Steps to Software Testing)</div>
+                <div class="talktype">COURSE</div>
+                <div class="wherewhenwhere">Mimmit Koodaa training (16.3.2020), Online</div>
+                <div class="wherewhenwhere">Mimmit Koodaa training (26.3.2020), Online</div>
+                <div class="wherewhenwhere">Mimmit Koodaa training (8.4.2020), Online</div>
+                <div class="wherewhenwhere">Mimmit Koodaa training (23.4.2020), Online</div>
+            </div>
+
+            <div class="card3">
                 <div class="timecircle">1/2 day</div>
                 <div class="talktitle">Setting Up Website Hosted on Github</div>
                 <div class="talktype">COURSE</div>
@@ -930,8 +950,8 @@
                 <div class="timecircle">1 day</div>
                 <div class="talktitle">Exploratory Testing on Programmatic (Computer) Interfaces</div>
                 <div class="talktype">COURSE</div>
-                <div class="wherewhenwhere">Sanae BEER.EX (29.-30.9.2022), Bratislava, Slovakia</div>
                 <div class="wherewhenwhere">Conference for Association for Software Testing (CAST) 2019 (12.8.2019), Cocoa Beach, Florida, USA</div>
+                <div class="wherewhenwhere">Sanae BEER.EX (29.-30.9.2022), Bratislava, Slovakia</div>
             </div>
 
     <div class="card3">
@@ -971,6 +991,7 @@
         <div class="wherewhenwhere">Customer Organization, September 5th & 6th 2006, Helsinki, Finland </div>
         <div class="wherewhenwhere">F-Secure & TestausOSY, May 2006, Helsinki, Finland </div>
         <div class="wherewhenwhere">Customer Organization, June 2004, Helsinki, Finland </div>
+        <div class="wherewhenwhere">Altom public course, Helsinki, Finland (22-23.4.2015)</div>
     </div>
 
     <div class="card3">
@@ -1119,6 +1140,16 @@
     </div>
 
     <div class="card3">
+        <div class="timecircle">1 day</div>
+        <div class="talktitle">Collaborative Exploratory and Unit Testing - How to Harness the Insights of Bug Discovery to Protect Your Code</div>
+        <div class="talktype">COURSE</div>
+        <div class="wherewhenwhere">Ministry of Testing public course, March 8th, 2016, Brighton, UK</div>
+        <div class="wherewhenwhere">TestBash NY, November 5th 2015, New York, USA</div>
+        <div class="wherewhenwhere">XP2015, May 25th 2015, Helsinki, Finland</div>
+        <p>This course is no longer available.</p>
+    </div>
+
+    <div class="card3">
         <div class="timecircle">?</div>
         <div class="talktitle">Ohjelmistojen testaus ja laadunvarmistus (Software Testing and Quality Assurance)</div>
         <div class="talktype">COURSE</div>
@@ -1127,7 +1158,6 @@
         <div class="wherewhenwhere">Teknillinen korkeakoulu, Ohjelmistoliiketoiminnan ja -tuotannon instituutti (SoberIT), Autumn 2002, Helsinki, Finland </div>
         <div class="wherewhenwhere">Teknillinen korkeakoulu, Ohjelmistoliiketoiminnan ja -tuotannon instituutti (SoberIT), Autumn ??, Helsinki, Finland </div>
         <p>This course is university course on testing and release management, advanced topics. Since I am no longer at university, I no longer teach this.</p>
-        <p>This course is university course on testing. First time I was running the exercises, three other times the whole course. </p>
 
     </div>
 
